--- a/css/events.css
+++ b/css/events.css
@@ -180,6 +180,7 @@ html{
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+			flex-wrap: wrap;
 		}
 
 		.story-event::before{
