--- a/css/gacha.css
+++ b/css/gacha.css
@@ -228,7 +228,7 @@ html{
 				display: flex;
 				flex-direction: column;
 				margin: 10px;
-				width: 60%;
+				width: 601%;
 		  	}
 		  	.gacha-banner img{ 
 			    width: 100%;
